# agave

./: .clangd  CMakeLists.txt  README.md  linker.ld
configs/: grub.cfg
include/: stdarg.h  stdbool.h  stddef.h  stdint.h  string.h
include/agave/: fs.h  idt.h  input.h  io.h  kcore.h  kcpu.h  kdriver.h  keys.h  klog.h  kmem.h  ktimer.h  kutils.h  kvid.h  pic.h  pit.h  ports.h  terminal.h  time.h  utils.h
include/agave/drivers/: keyboard.h
include/agave/fs/: ramfs.h
include/agave/term/: command.h
scripts/: build.sh  run.sh
src/: idt.c  main.c  pic.c  pit.c
src/asm/: idt.s  irq.s
src/boot/: boot.s
src/drivers/: base.c  keyboard.c
src/fs/: fs.c  ramfs.c
src/input/: input.c
src/kern/: kcore.c  kcpu.c  klog.c  kmem.c  ktimer.c  kutils.c  kvid.c
src/std/: div.c  string.c
src/term/: command.c  terminal.c
src/time/: rtc.c
utils/: i686-elf-toolchain.cmake
